name:                log
version:             0.5.1
synopsis:            Structured logging solution with multiple backends

description:         A library that provides a way to record structured log messages with multiple backends.
                     .
                     Supported backends:
                     .
                     * standard output
                     .
                     * PostgreSQL

homepage:            https://github.com/scrive/log
license:             BSD3
license-file:        LICENSE
author:              Scrive
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>
category:            System
build-type:          Simple
cabal-version:       >=1.10

Source-repository head
  Type:     git
  Location: https://github.com/scrive/log

library
  exposed-modules:     Log,
                       Log.Backend.ElasticSearch,
                       Log.Backend.PostgreSQL,
                       Log.Backend.StandardOutput,
                       Log.Class,
                       Log.Data,
                       Log.Internal.Logger,
                       Log.Logger,
                       Log.Monad

  build-depends:       base <5,
                       aeson >=0.6.2.0,
                       aeson-pretty >=0.7,
                       base64-bytestring,
                       bloodhound,
                       bytestring,
                       cond,
                       deepseq,
                       exceptions >=0.6,
                       hpqtypes >=1.5,
                       http-client,
                       lifted-base,
                       monad-control >=0.3,
                       monad-time >= 0.2,
                       mtl,
                       old-locale,
                       split,
                       stm >=2.4,
                       text,
                       text-show,
                       time >= 1.5,
                       transformers,
                       transformers-base,
                       unordered-containers,
                       vector

  hs-source-dirs:      src

  ghc-options:         -O2 -Wall -funbox-strict-fields

  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TypeFamilies
                    , UndecidableInstances
