cabal-version:       3.0
name:                log-base
version:             0.12.0.1
synopsis:            Structured logging solution (base package)

description:         A library that provides a way to record structured log
                     messages. Use this package in conjunction with
                     'log-elasticsearch' or 'log-postgres', depending
                     on which back end you need.


homepage:            https://github.com/scrive/log
license:             BSD-3-Clause
license-file:        LICENSE
author:              Scrive AB
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>,
                     Jonathan Jouty <jonathan@scrive.com>,
                     Mikhail Glushenkov <mikhail@scrive.com>,
                     Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           Scrive AB
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC == { 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.6, 9.8.4, 9.10.1, 9.12.1 }

source-repository head
  type:     git
  location: https://github.com/scrive/log.git

library
  exposed-modules:     Log,
                       Log.Backend.LogList,
                       Log.Backend.StandardOutput,
                       Log.Backend.StandardOutput.Bulk,
                       Log.Backend.Text,
                       Log.Class,
                       Log.Data,
                       Log.Internal.Aeson.Compat,
                       Log.Internal.Logger,
                       Log.Logger,
                       Log.Monad
  build-depends:       base >= 4.13 && <5,
                       aeson >= 1.0,
                       aeson-pretty >=0.8.2,
                       bytestring,
                       deepseq,
                       exceptions >=0.6,
                       mmorph >=1.0.9 && <1.3,
                       monad-control >=1.0.3,
                       mtl,
                       semigroups,
                       stm >=2.4,
                       text,
                       time >= 1.5,
                       transformers-base,
                       unliftio-core >= 0.1.2.0 && < 0.3,
                       unordered-containers
  hs-source-dirs:      src

  ghc-options:         -Wall

  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TypeFamilies
                    , UndecidableInstances
