name:                log-elasticsearch
version:             0.12.2.0
synopsis:            Structured logging solution (Elasticsearch back end)

description:         Elasticsearch back end for the 'log' library suite.
                     Depends on 'log-base'.

homepage:            https://github.com/scrive/log
license:             BSD3
license-file:        LICENSE
author:              Scrive AB
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>,
                     Jonathan Jouty <jonathan@scrive.com>,
                     Mikhail Glushenkov <mikhail@scrive.com>,
                     Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           Scrive AB
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2

Source-repository head
  Type:     git
  Location: https://github.com/scrive/log.git

flag openssl
  Description:   Use http-client-openssl instead of http-client-tls
  Default:       True

library
  exposed-modules:     Log.Backend.ElasticSearch
                       Log.Backend.ElasticSearch.Internal
                       Log.Backend.ElasticSearch.Lens
  build-depends:       base >= 4.11 && <5,
                       aeson >= 1.0,
                       aeson-pretty >=0.8.2,
                       base64-bytestring,
                       bytestring,
                       deepseq,
                       http-client,
                       http-types,
                       log-base >= 0.10 && <0.12,
                       network-uri,
                       semigroups,
                       text,
                       text-show >= 2,
                       time >= 1.5,
                       transformers,
                       unordered-containers,
                       vector
  hs-source-dirs:      src

  ghc-options:         -Wall

  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , UndecidableInstances

  if flag(openssl)
    cpp-options: -DOPENSSL
    build-depends: http-client-openssl >= 0.3.2
  else
    build-depends: http-client-tls
