cabal-version:       3.0
name:                log-elasticsearch
version:             0.13.0.1
synopsis:            Structured logging solution (Elasticsearch back end)

description:         Elasticsearch back end for the 'log' library suite.
                     Depends on 'log-base'.

homepage:            https://github.com/scrive/log
license:             BSD-3-Clause
license-file:        LICENSE
author:              Scrive AB
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>,
                     Jonathan Jouty <jonathan@scrive.com>,
                     Mikhail Glushenkov <mikhail@scrive.com>,
                     Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           Scrive AB
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC == { 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.6, 9.8.4, 9.10.1, 9.12.2 }

source-repository head
  type:     git
  location: https://github.com/scrive/log.git

flag openssl
  description:   Use http-client-openssl instead of http-client-tls
  default:       True

library
  exposed-modules:     Log.Backend.ElasticSearch
                       Log.Backend.ElasticSearch.Internal
                       Log.Backend.ElasticSearch.Lens
  build-depends:       base >= 4.13 && <5,
                       aeson >= 1.0,
                       aeson-pretty >=0.8.2,
                       base64-bytestring,
                       bytestring,
                       deepseq,
                       http-client,
                       http-types,
                       log-base >= 0.10 && <0.13,
                       network-uri,
                       semigroups,
                       text,
                       text-show >= 2,
                       time >= 1.5,
                       transformers,
                       unliftio-core >= 0.2,
                       unordered-containers,
                       vector
  hs-source-dirs:      src

  ghc-options:         -Wall

  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , UndecidableInstances

  if flag(openssl)
    cpp-options: -DOPENSSL
    build-depends: http-client-openssl >= 0.3.2
  else
    build-depends: http-client-tls
