cabal-version:       2.0
name:                log-postgres
version:             0.7.1.1
synopsis:            Structured logging solution (PostgreSQL back end)

description:         PostgreSQL back end for the 'log' library suite.
                     Depends on 'log-base'.

homepage:            https://github.com/scrive/log
license:             BSD3
license-file:        LICENSE
author:              Scrive AB
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>,
                     Jonathan Jouty <jonathan@scrive.com>,
                     Mikhail Glushenkov <mikhail@scrive.com>,
                     Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           Scrive AB
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4,
                     GHC == 8.6.5

Source-repository head
  Type:     git
  Location: https://github.com/scrive/log.git

library
  exposed-modules:    Log.Backend.PostgreSQL
  build-depends:      base                  >= 4.9  && < 4.12 || ^>= 4.12
                    , log-base              >= 0.7  && < 0.8  || ^>= 0.8
                    , aeson                 >= 1.0  && < 1.4  || ^>= 1.4
                    , hpqtypes             ^>= 1.7
                    , bytestring           ^>= 0.10
                    , deepseq              ^>= 1.4
                    , text                 ^>= 1.2
                    , time                  >= 1.6  && < 1.9  || ^>= 1.9
                    , unordered-containers ^>= 0.2
                    , vector               ^>= 0.12
                    , aeson-pretty         ^>= 0.8
                    , base64-bytestring    ^>= 1.0
                    , hpqtypes             ^>= 1.7
                    , mtl                  ^>= 2.2
                    , lifted-base          ^>= 0.2
                    , semigroups            >= 0.16 && < 0.19 || ^>= 0.19
                    , text-show             >= 3.7  && < 3.8  || ^>= 3.8
                    , http-client           >= 0.5  && < 0.6  || ^>= 0.6
                    , log-base              >= 0.7  && < 0.8  || ^>= 0.8
                    , split                ^>= 0.2

  hs-source-dirs:     src

  ghc-options:        -O2 -Wall -funbox-strict-fields

  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TypeFamilies
                    , UndecidableInstances
