cabal-version:       2.0
name:                log-postgres
version:             0.8.1.0
synopsis:            Structured logging solution (PostgreSQL back end)

description:         PostgreSQL back end for the 'log' library suite.
                     Depends on 'log-base'.

homepage:            https://github.com/scrive/log
license:             BSD3
license-file:        LICENSE
author:              Scrive AB
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>,
                     Jonathan Jouty <jonathan@scrive.com>,
                     Mikhail Glushenkov <mikhail@scrive.com>,
                     Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           Scrive AB
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2

Source-repository head
  Type:     git
  Location: https://github.com/scrive/log.git

library
  exposed-modules:    Log.Backend.PostgreSQL
  build-depends:      base                  >= 4.13  && < 5
                    , aeson                 >= 1.0
                    , aeson-pretty          >= 0.8
                    , base64-bytestring     >= 1.0
                    , bytestring            >= 0.10
                    , deepseq               >= 1.4
                    , hpqtypes              >= 1.9.1.2
                    , http-client           >= 0.5
                    , lifted-base           >= 0.2
                    , log-base              >= 0.10  && < 0.12
                    , mtl                   >= 2.2
                    , semigroups            >= 0.16
                    , split                 >= 0.2
                    , text                  >= 1.2
                    , text-show             >= 3.7
                    , time                  >= 1.6
                    , unordered-containers  >= 0.2
                    , vector                >= 0.12

  hs-source-dirs:     src

  ghc-options:        -Wall

  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TypeFamilies
                    , UndecidableInstances
